duniverse/menhirLib.20200211/test/static/bad/unification-error-not-at-toplevel.mly
%start<int> a
%token A
%%

a: b(c(A)) b(c(A, A)) {}

c(X) : X {}
b(X) : X {}
